[tool.poetry]
name = "pybricks"
version = "3.5.0b2"
description = "Documentation and user-API stubs for Pybricks MicroPython"
authors = ["The Pybricks Authors <team@pybricks.com>"]
maintainers = ["Laurens Valk <laurens@pybricks.com>", "David Lechner <david@pybricks.com>" ]
license = "MIT"
readme = "README.rst"
homepage = "https://pybricks.com"
repository = "https://github.com/pybricks/pybricks-api"
documentation = "https://docs.pybricks.com"
classifiers = [
    "Programming Language :: Python :: Implementation :: MicroPython",
]
packages = [
    { include = "pybricks", from = "src" },
    { include = "micropython", from = "src" },
    { include = "uerrno", from = "src" },
    { include = "uio", from = "src" },
    { include = "ujson", from = "src" },
    { include = "umath", from = "src" },
    { include = "urandom", from = "src" },
    { include = "uselect", from = "src" },
    { include = "ustruct", from = "src" },
    { include = "usys", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.lint.dependencies]
black = "^22.3.0"
doc8 = "^0.8.1"
flake8 = "^4.0"

[tool.poetry.group.doc.dependencies]
Sphinx = { git = "https://github.com/pybricks/sphinx.git", rev = "cd277d09" }
sphinx-rtd-theme = "^1.0.0"
toml = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
