[tool.poetry]
name = "pybricks_jedi"
version = "1.0.0"
description = "Code completion for Pybricks."
authors = ["The Pybricks Authors"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.11"
pybricks = { path = "../", develop = true }
jedi = "^0.18.1"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
