[tool.poetry]
name = "pybricks_jedi"
version = "1.16.0"
description = "Code completion for Pybricks."
authors = ["The Pybricks Authors <team@pybricks.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.12"
pybricks = "3.5.0b2"
jedi = "0.18.1"
typing-extensions = "4.2.0"
docstring-parser = "0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
pybricks = { path = "../", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
